tests/Errors/Generic/Files/LineLength/TooLong.php
<?php

declare(strict_types=1);

$foo = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut enim ex. Phasellus finibus pretium arcu, ut eff';

echo $foo;
